EN Translation correction for the Hurlingstock name

--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -7865,7 +7865,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Hurlingstock</source>
-        <target>Hurlingstock</target>
+        <target>Hurling stick</target>
       </segment>
     </unit>
     <unit id="8dLKyx6" name="01e4f48">
