EN Translation for the Hurling stick description

--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -7874,7 +7874,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Ein kleiner Ratschlag. Wenn du schon den falschen Kampf wählst... dann wähle wenigstens die richtige Waffe.</source>
-        <target>Ein kleiner Ratschlag. Wenn du schon den falschen Kampf wählst... dann wähle wenigstens die richtige Waffe.</target>
+        <target>A word of advice. If you're picking the wrong fight... at least pick the right weapon.</target>
       </segment>
     </unit>
     <unit id="W0wWbGS" name="Guiness">
