--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -15526,7 +15526,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du hast am Bauprojekt %plan% mitgeholfen.</source>
-        <target>Du hast am Bauprojekt %plan% mitgeholfen.</target>
+        <target>You have participated in the construction of the %plan%.</target>
       </segment>
     </unit>
     <unit id="U9LSFlB" name="Herzlichen Glückwunsch! Du hast deine Behausung in ein(e) %home% verwandelt.">
@@ -15724,7 +15724,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du hast dafür %count% Aktionspunkt(e) verbraucht.</source>
-        <target>Du hast dafür %count% Aktionspunkt(e) verbraucht.</target>
+        <target>You have used %count% action point(s).</target>
       </segment>
     </unit>
     <unit id="Ltkwrh9" name="1a5e7f5">
