EN Translation for Winness

--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -7883,7 +7883,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Guiness</source>
-        <target>Guiness</target>
+        <target>Winness</target>
       </segment>
     </unit>
     <unit id="W05WB_r" name="f4c9ac4">
