--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -17804,7 +17804,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Wie gebraucht man diese Karte?</source>
-        <target>Wie gebraucht man diese Karte?</target>
+        <target>How does the map work ?</target>
       </segment>
     </unit>
     <unit id="Gu2qWPY" name="Brauchst du Hilfe? Benutze den %modelink%!">
@@ -17831,7 +17831,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Handbuch zur Aussenwelt</source>
-        <target>Handbuch zur Aussenwelt</target>
+        <target>The pocket guide to the World Beyond</target>
       </segment>
     </unit>
     <unit id="RVCVIu." name="05a9ba3">
@@ -17889,7 +17889,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du besitzt eine &lt;strong&gt;Karte&lt;/strong&gt;. Benutze den Knopf hier oben, um nicht verloren zu gehen!</source>
-        <target><![CDATA[Du besitzt eine <strong>Karte</strong>. Benutze den Knopf hier oben, um nicht verloren zu gehen!]]></target>
+        <target><![CDATA[You have a <strong>map</strong>. Use it well so that you don't get lost - don't forget the buttons underneath it!]]></target>
       </segment>
     </unit>
     <unit id="Cm7opZK" name="877bae7">
