--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -7937,7 +7937,7 @@
       </notes>
       <segment>
         <source>Eine Art großes, stinkendes, orangefarbenes Gemüse, wie du es noch nie gesehen hast. Ein plötzlicher Drang, es auszugraben, ergreift dich, ohne dass du weißt warum...</source>
-        <target>Une sorte de gros légume orange malodorant, comme vous n'en avez jamais vu auparavant. Une soudaine envie de le creuser vous prend, sans que vous sachiez pourquoi...</target>
+        <target>Une sorte de gros légume orange malodorant, comme vous n'en avez jamais vu auparavant. Une soudaine envie de le sculpter vous prend, sans que vous sachiez pourquoi...</target>
       </segment>
     </unit>
     <unit id="Cp5Hvee" name="%citizen% befehlen etwas zu trinken.">
