--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -18291,7 +18291,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Der Leichnam von %citizen% wurde nicht zerstört.</source>
-        <target>Der Leichnam von %citizen% wurde nicht zerstört.</target>
+        <target>%citizen%'s corpse has not been destroyed.</target>
       </segment>
     </unit>
     <unit id=".67v4pV" name="0683fbc">
@@ -18300,7 +18300,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Es ist gut möglich, dass er diese Nacht aufersteht und versuchen wird, uns anzugreifen.</source>
-        <target>Es ist gut möglich, dass er diese Nacht aufersteht und versuchen wird, uns anzugreifen.</target>
+        <target>It's entirely possible that it'll decide to wake up and eat you alive tonight.</target>
       </segment>
     </unit>
     <unit id=".eKZbiD" name="e38ba9e">
@@ -18606,7 +18606,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Da %citizen% tot ist, besteht ein hohes Risiko, dass sein Körper mit ansteckenden Keimen von &lt;em&gt;%townname%&lt;/em&gt; kontaminiert ist. Wenn wir nicht wollen, dass er wieder aufersteht und uns angreift, muss er entweder mit Wasser übergossen oder weggeworfen werden.</source>
-        <target><![CDATA[Da %citizen% tot ist, besteht ein hohes Risiko, dass sein Körper mit ansteckenden Keimen von <em>%townname%</em> kontaminiert ist. Wenn wir nicht wollen, dass er wieder aufersteht und uns angreift, muss er entweder mit Wasser übergossen oder weggeworfen werden.]]></target>
+        <target><![CDATA[%citizen%, dead though they are, there is a good chance that their body could be contaminated by infectious agents from <em>%townname%</em>. Therefore the corpse has to be watered or thrown out before it gets back up and attacks its fellow former citizens this very evening...]]></target>
       </segment>
     </unit>
     <unit id="fY8p2vV" name="Dein Diebstahlversuch ist gescheitert! Du bist entdeckt worden!">
