FR Translation correction for the Stronghold name

--- a/translations/buildings.fr.xlf
+++ b/translations/buildings.fr.xlf
@@ -1690,7 +1690,7 @@
       </notes>
       <segment>
         <source>Befestigte Unterkunft</source>
-        <target>Abris fortifié</target>
+        <target>Abri fortifié</target>
       </segment>
     </unit>
     <unit id="TLVi.09" name="Bunker">
