EN Translation for Abandoning Watch popup

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -17438,7 +17438,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du verlässt deinen Posten?...</source>
-        <target>Du verlässt deinen Posten?...</target>
+        <target>So, you've decided to abandon ship? Well, that's your call...</target>
       </segment>
     </unit>
     <unit id="81G6y92" name="2bec6b6">
