EN Translation for starting a town tooltip (Game icon)

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -11008,7 +11008,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Es ist Zeit, sich seinen Mitmenschen in der Hölle anschließen!</source>
-        <target>Es ist Zeit, sich seinen Mitmenschen in der Hölle anschließen!</target>
+        <target>It is time to join your fellow degenerates in hell!</target>
       </segment>
     </unit>
     <unit id="EEkc8Fs" name="Anzahl der Tage, die du als Schamane gespielt hast.">
