--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -7481,7 +7481,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Weihnachts-Süßigkeiten</source>
-        <target>Weihnachts-Süßigkeiten</target>
+        <target>Dulce de Navidad</target>
       </segment>
     </unit>
     <unit id="ijOQByU" name="309fa3e">
@@ -7499,7 +7499,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Geschenkpaket</source>
-        <target>Geschenkpaket</target>
+        <target>Paquete postal</target>
       </segment>
     </unit>
     <unit id="kdGOsHH" name="cfe7609">
@@ -7517,7 +7517,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Großes Geschenkpaket</source>
-        <target>Großes Geschenkpaket</target>
+        <target>Gran paquete postal</target>
       </segment>
     </unit>
     <unit id="1cAIp2n" name="Du hast {item} getrunken, aber scheinbar geschieht nichts...">
@@ -7769,7 +7769,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Kreischender Wecker (entladen)</source>
-        <target>Kreischender Wecker (entladen)</target>
+        <target>Despertador chillón (apagado)</target>
       </segment>
     </unit>
     <unit id="rigrkZL" name="e192faa">
@@ -7787,7 +7787,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Kreischender Wecker (mit Strom)</source>
-        <target>Kreischender Wecker (mit Strom)</target>
+        <target>Despertador chillón (encendido)</target>
       </segment>
     </unit>
     <unit id="4h5ljTX" name="b317cb5">
@@ -7850,7 +7850,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Weicher Kürbis</source>
-        <target>Weicher Kürbis</target>
+        <target>Calabaza suave</target>
       </segment>
     </unit>
     <unit id="C50KixZ" name="ff67b99">
@@ -7868,7 +7868,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Hurlingstock</source>
-        <target>Hurlingstock</target>
+        <target>Palo de hockey</target>
       </segment>
     </unit>
     <unit id="8dLKyx6" name="01e4f48">
@@ -7886,7 +7886,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Guiness</source>
-        <target>Guiness</target>
+        <target>Winness</target>
       </segment>
     </unit>
     <unit id="W05WB_r" name="f4c9ac4">
